--- a/src/CVApp/Web/CVApp.Web/Views/Shared/_Layout.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav id="nav" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CVApp.Web</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -44,9 +44,10 @@
     </header>
     <div class="container">
         <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-3">
+        <main id="main" class="pb-3">
             @RenderBody()
         </main>
+        <a href="#nav" class="toTop"><i class="fa fa-angle-up"></i></a>
     </div>
 
     <footer class="border-top footer text-muted">
