--- a/src/CVApp/Web/CVApp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Shared/_LoginPartial.cshtml
@@ -16,8 +16,8 @@
                     <a class="dropdown-item" asp-controller="PersonalInfo" asp-action="Index">Personal Info</a>
                     <a class="dropdown-item" asp-controller="Education" asp-action="Index">Education</a>
                     <a class="dropdown-item" asp-controller="Work" asp-action="Index">Work</a>
-                    <a class="dropdown-item" asp-controller="Skil" asp-action="Index">Skil</a>
-                    <a class="dropdown-item" asp-controller="Certificate" asp-action="Index">Sertificate</a>
+                    <a class="dropdown-item" asp-controller="Skill" asp-action="Index">Skill</a>
+                    <a class="dropdown-item" asp-controller="Certificate" asp-action="Index">Certificate</a>
                     <a class="dropdown-item" asp-controller="Language" asp-action="Index">Language</a>
                 </div>
             </li>
