--- a/src/CVApp/Web/CVApp.Web/Views/Resume/ResumeToPdf.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Resume/ResumeToPdf.cshtml
@@ -3,29 +3,25 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CVApp.Web</title>
+    <title>CVApp</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    @*<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <link rel="stylesheet" media="all" href='../wwwroot/lib/bootstrap/dist/css/bootstrap.css' />*@
     <link rel="stylesheet" media="all" href="../wwwroot/css/print.css" />
 </head>
 <body>
     @model CVApp.ViewModels.Resume.ResumeDisplayViewModel
     @{
         var name = "";
-
         Dictionary<string, int> percents = new Dictionary<string, int>()
-{
-{ "Beginner/A1", 10},
-{ "Elementary/A2", 20},
-{ "Intermediate/B1", 30 },
-{ "Upper Intermediate/B2", 50},
-{ "Advanced/C1", 80 },
-{ "Proficient/C2", 100 }
-};
+    {
+        { "Beginner/A1", 10},
+        { "Elementary/A2", 20},
+        { "Intermediate/B1", 30 },
+        { "Upper Intermediate/B2", 50},
+        { "Advanced/C1", 80 },
+        { "Proficient/C2", 100 }
+    };
 
         var percent = 0;
-
     }
 
     <div class="container">
@@ -134,7 +130,11 @@
         </div>
         <hr class="frame-hr" />
     </div>
-
+    <footer>
+        <div class="container">
+            &copy; 2019 - CVApp.Web created by Eva R.
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
