--- a/src/CVApp/Web/CVApp.Web/Views/Home/Index.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Home/Index.cshtml
@@ -4,11 +4,11 @@
 
     <div class="jumbotron">
         <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple app, with which you can easily create a resume.</p>
+        <p class="lead">This is a simple App, with which you can easily create an almost stunning resume.</p>
         <hr class="my-4">
         @if (this.User.Identity.IsAuthenticated)
         {
-            <a asp-controller="Start" asp-action="Index" class="btn btn-primary btn-lg">Start</a>
+            <a asp-controller="Resume" asp-action="Start" class="btn btn-primary btn-lg">Start</a>
         }
         else
         {
