--- a/src/CVApp/Web/CVApp.Web/Views/PersonalInfo/Index.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/PersonalInfo/Index.cshtml
@@ -38,7 +38,7 @@
                         <div class="form-group">
                             <label asp-for="DateOfBirth"></label>
                             <div class="input-group date" id="datetimepickerDate" data-target-input="nearest">
-                                <input asp-for="DateOfBirth" type="text" class="form-control datetimepicker-input" data-target="#datetimepickerDate" placeholder="mm/dd/yyyy" />
+                                <input asp-for="DateOfBirth" type="text" class="form-control datetimepicker-input" data-target="#datetimepickerDate" placeholder="MM/dd/yyyy" />
                                 <div class="input-group-append" data-target="#datetimepickerDate" data-toggle="datetimepicker">
                                     <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                 </div>
