--- a/src/CVApp/Web/CVApp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,6 @@
 @using Microsoft.AspNetCore.Identity
-@using  CVApp.Models
-@inject SignInManager<CVAppUser> SignInManager
-@inject UserManager<CVAppUser> UserManager
+@inject SignInManager<CVApp.Models.CVAppUser> SignInManager
+@inject UserManager<CVApp.Models.CVAppUser> UserManager
 
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
@@ -17,7 +16,6 @@
                     <a class="dropdown-item" asp-controller="Education" asp-action="Index">Education</a>
                     <a class="dropdown-item" asp-controller="Work" asp-action="Index">Work</a>
                     <a class="dropdown-item" asp-controller="Skill" asp-action="Index">Skill</a>
-                    <a class="dropdown-item" asp-controller="Certificate" asp-action="Index">Certificate</a>
                     <a class="dropdown-item" asp-controller="Language" asp-action="Index">Language</a>
                 </div>
             </li>
