--- a/src/CVApp/Web/CVApp.Web/wwwroot/css/site.css
+++ b/src/CVApp/Web/CVApp.Web/wwwroot/css/site.css
@@ -30,7 +30,7 @@ a.navbar-brand {
     float: right;
     right: 1em;
     font-size: 3em;
-    color: #e2dada;
+    color: #967777;
 }
 
 /* Sticky footer styles
