--- a/src/CVApp/Web/CVApp.Web/Views/Home/Index.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Home/Index.cshtml
@@ -2,17 +2,17 @@
     ViewData["Title"] = "Home Page";
 }
 
-    <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple App, with which you can easily create an almost stunning resume.</p>
-        <hr class="my-4">
-        @if (this.User.Identity.IsAuthenticated)
-        {
-            <a asp-controller="Resume" asp-action="Start" class="btn btn-primary btn-lg">Start</a>
-        }
-        else
-        {
-            <p>If you don't have an account yet, please <a asp-area="Identity" asp-page="/Account/Register">Register</a> first, otherwise <a asp-area="Identity" asp-page="/Account/Login">Login</a>.</p>
-        }
-
-    </div>
+<div class="jumbotron">
+    <h1 class="display-4">Hello!</h1>
+    <p class="lead">This is a simple App, by which you can easily create a stunning resume.</p>
+    <hr class="my-4">
+    @if (this.User.Identity.IsAuthenticated)
+    {
+        <a asp-controller="Resume" asp-action="Start" class="btn btn-primary btn-lg">Start</a>
+    }
+    else
+    {
+        <hr class="border-top"
+        <p>If you don't have an account yet, please <a asp-area="Identity" asp-page="/Account/Register">Register</a> first, otherwise <a asp-area="Identity" asp-page="/Account/Login">Login</a>.</p>
+    }
+</div>
